fix main menu align, fix tooltip align, move tooltip sript to base

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -20,10 +20,10 @@
     box-sizing: border-box;
     display: flex;
     justify-content: left;
+    align-content: flex-start;
     flex-wrap: wrap;
     gap: 3vw;
     padding: 0 4vw 4vw 4vw;
-
 }
 
 #shortcuts {
